tests/endpoint_macros_compile_fail/query_type_duplicate.stderr
error[E0119]: conflicting implementations of trait `EndpointQuery` for type `ListQuery`
 --> $WORKSPACE/tests/endpoint_macros_compile_fail/query_type_duplicate.rs
  |
  | #[derive(Debug, Default, Serialize, EndpointQueryDerive)]
  |                                     ------------------- first implementation here
...
  | #[derive(EndpointDerive)]
  |          ^^^^^^^^^^^^^^ conflicting implementation for `ListQuery`
  |
  = note: this error originates in the derive macro `EndpointDerive` (in Nightly builds, run with -Z macro-backtrace for more info)
